-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0, 5.12.1
-
None
-
-
8b3463fdeb3d03fd0c87873089a6f84321eecc49 (qt/qtbase/5.12)
Since 5.12.0 our QTableWidgets are doing the word wrapping when there is not enough space for fitting the displayed text lines, so the first line and the last line are truncated.
If the wordWrap attribute is disabled, the text is displayed as expected, but the word wrapping should work as in previous versions.
Other screenshots can be found in:
https://github.com/sqlitebrowser/sqlitebrowser/issues/1658
https://github.com/sqlitebrowser/sqlitebrowser/issues/1731
Definitions of the affected QTableWidgets can be found in:
https://github.com/sqlitebrowser/sqlitebrowser/blob/master/src/MainWindow.ui (dataTable)
https://github.com/sqlitebrowser/sqlitebrowser/blob/master/src/PreferencesDialog.ui (tableClientCerts, tableCaCerts)
All our QTableWidgets seem to be affected, but not our QTreeWidgets.
- relates to
-
QTBUG-73845 [REG 5.11.2-5.12.0] Elided text in tree displaying incorrectly
-
- Closed
-